# Agentic-Ai

./: .gitignore  tp1.ipynb
Rag/: .env  RAGV2.ipynb  pyproject.toml  rag.py
tp1/: .gitignore  pyproject.toml  tp1.ipynb
tplangchain/: .env  agentic_ai_with_langchain_V3.ipynb  doc.txt  main.py  pyproject.toml  sma.ipynb
